--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Ruin0x11 <ipickering2@gmail.com>"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = "0.3.9"
+winapi = { git = "https://github.com/Ruin0x11/winapi-rs", branch = "mci-2", features = ["mmsystem", "winuser", "minwindef"] }
 
 [dependencies]
 midir = "0.7.0"
